@@ -1,11 +1,9 @@
 package org.egov.ndc.service.notification;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.ndc.config.NDCConfiguration;
-import org.egov.ndc.repository.ServiceRequestRepository;
 import org.egov.ndc.service.UserService;
 import org.egov.ndc.util.NotificationUtil;
 import org.egov.ndc.web.model.OwnerInfo;
@@ -14,7 +12,6 @@ import org.egov.ndc.web.model.UserResponse;
 import org.egov.ndc.web.model.ndc.Application;
 import org.egov.ndc.web.model.ndc.NdcApplicationRequest;
 import org.egov.ndc.web.model.ndc.NdcApplicationSearchCriteria;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
@@ -24,44 +21,37 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 public class NDCNotificationService {
 
-	private NDCConfiguration config;
+	private final NDCConfiguration config;
+	private final NotificationUtil util;
+	private final UserService userService;
 
-	private NotificationUtil util;
-
-	private ServiceRequestRepository serviceRequestRepository;
-
-	@Autowired
-	private UserService userService;
-
-	@Autowired
-	public NDCNotificationService(NDCConfiguration config, NotificationUtil util,
-                                  ServiceRequestRepository serviceRequestRepository) {
+	public NDCNotificationService(NDCConfiguration config, NotificationUtil util, UserService userService) {
 		this.config = config;
 		this.util = util;
-		this.serviceRequestRepository = serviceRequestRepository;
+		this.userService = userService;
 	}
 
 	/**
 	 * Creates and send the sms based on the NDCRequest
 	 * 
-	 * @param request
+	 * @param ndcRequest
 	 *            The NDCRequest listenend on the kafka topic
 	 */
 	public void process(NdcApplicationRequest ndcRequest) {
+		if (config.getIsSMSEnabled() == null || !config.getIsSMSEnabled()) {
+			return;
+		}
 		List<SMSRequest> smsRequests = new LinkedList<>();
-		if (null != config.getIsSMSEnabled()) {
-			if (config.getIsSMSEnabled()) {
-				enrichSMSRequest(ndcRequest, smsRequests);
-				if (!CollectionUtils.isEmpty(smsRequests))
-					util.sendSMS(smsRequests, config.getIsSMSEnabled());
-			}
+		enrichSMSRequest(ndcRequest, smsRequests);
+		if (!CollectionUtils.isEmpty(smsRequests)) {
+			util.sendSMS(smsRequests, config.getIsSMSEnabled());
 		}
 	}
 
 	/**
 	 * Enriches the smsRequest with the customized messages
 	 * 
-	 * @param request
+	 * @param ndcRequest
 	 *            The bpaRequest from kafka topic
 	 * @param smsRequests
 	 *            List of SMSRequets
@@ -71,7 +61,7 @@ public class NDCNotificationService {
 		for(Application application : applications) {
 			String tenantId = application.getTenantId();
 			String localizationMessages = util.getLocalizationMessages(tenantId, ndcRequest.getRequestInfo());
-			String message = util.getCustomizedMsg(ndcRequest.getRequestInfo(), application, localizationMessages);
+			String message = util.getCustomizedMsg(application, localizationMessages);
 			if (message != null) {
 				Map<String, String> mobileNumberToOwner = getUserList(application,ndcRequest.getRequestInfo());
 				smsRequests.addAll(util.createSMSRequest(message, mobileNumberToOwner));
@@ -84,17 +74,15 @@ public class NDCNotificationService {
 	 * To get the Users to whom we need to send the sms notifications or event
 	 * notifications.
 	 *
-	 * @param ndcRequest
+	 * @param application
 	 * @param requestInfo
-	 * @return
+	 * @return map of mobile number to owner name
 	 */
-	private Map<String, String> getUserList(Application ndcRequest, RequestInfo requestInfo) {
+	private Map<String, String> getUserList(Application application, RequestInfo requestInfo) {
 		Map<String, String> mobileNumberToOwner = new HashMap<>();
-		String tenantId = ndcRequest.getTenantId();
-//		List<String> mobileNumbers = ndcRequest.getOwners().stream().map(OwnerInfo::getMobileNumber).collect(Collectors.toList());
-		List<String> uuid = ndcRequest.getOwners().stream().map(OwnerInfo::getUuid).collect(Collectors.toList());
-		Set<String> ownerId = new HashSet<>();
-		ownerId.addAll(uuid);
+		String tenantId = application.getTenantId();
+		List<String> uuid = application.getOwners().stream().map(OwnerInfo::getUuid).toList();
+		Set<String> ownerId = new HashSet<>(uuid);
 		NdcApplicationSearchCriteria ndcSearchCriteria = new NdcApplicationSearchCriteria();
 		ndcSearchCriteria.setOwnerIds(ownerId);
 		ndcSearchCriteria.setTenantId(tenantId);
